# email-scraper-verifier

./: .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  analyze_openspace.py  analyze_team_page.py  batch.jsonl  batch_test_results.txt  batch_test_results_v2.txt  clear_tcp25_cache.sh  dev.db.bak.1761853013  dev_ingest.db  diagnose.sh  diagnose_catchall.py  diagnose_extraction.py  diagnose_issues.sh  find_names.py  fix_all.sh  fix_pipeline_issues.py  install.sh  master_fix.sh  ok.csv  ok.jsonl  pyproject.toml  quick_start.sh  reclassify_catchall_emails.py  requirements.txt  reset_and_rerun.sh  reset_db.py  setup_dashboard.sh  stderr.tmp  test_cfg.py  test_metrics_queries.py  test_pipeline.sh  tmp_check.py  tmp_check_with_test_helper.py  tmp_idx.py  (+6 more)
db/: schema.sql  schema_postgres.sql
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  TROUBLESHOOTING.md  icp-schema.yaml  objectives.md  r08-domain-resolution.md  r16-smtp.md  r21-search-indexing.md  r21-search-mirror-schema.md  r22-lead-search-api.md  r24-admin-ui.md  r25-qa-acceptance.md  robots-policy.md  scoring.md  service-management.md  title_map.yaml
email_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
migrations/: 001_auth_tables.sql  002_user_approval.sql  003_email_verification_code.sql  004_google_discovery.sql  005_company_exported_at.sql  006_discovery_tracking.sql
samples/: leads.csv  leads.jsonl  live_test_companies.csv
scripts/: accept_r08.ps1  accept_r09.ps1  accept_r10.ps1  accept_r11.ps1  accept_r12.ps1  accept_r13.ps1  accept_r14.ps1  accept_r15.ps1  accept_r16.ps1  accept_r17.ps1  accept_r18.ps1  accept_r19.ps1  accept_r20.ps1  accept_r21.ps1  accept_r22.ps1  accept_r23.ps1  accept_r24.ps1  accept_r25.ps1  apply_003_verification_code.py  apply_auth_migration.py  apply_schema.py  apply_unique_email_index.py  backfill_domain_audit.py  backfill_o02_roles.py  backfill_o14_lead_search_docs.py  backfill_o26_delivery_catchall.py  backfill_o26_upgrade_risky_to_valid.py  backfill_r14_icp.py  batch_test.ps1  check_view.py  cli.py  crawl_domain.py  daily_discovery.py  debug_icp_loader.py  demo_autodiscovery.py  demo_export_policy.py  demo_o26_full_e2e.py  demo_o26_unclear_domains.py  diagnose_catchall.py  diagnose_invalid_emails.py  (+57 more)
src/: autodiscovery_result.py  cli.py  config.py  db.py  db_ingest.py  db_pages.py  db_suppression.py  exceptions.py  jobs.py  queue.py  utils.py
(+169 files in other folders)
