# pyproject.toml
[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-scraper"
version = "0.1.0"
description = "Email Scraper/Verifier"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "redis>=5",
  "rq>=1.16",
  "dnspython>=2.6",
  "tenacity>=8.2",
  "python-dotenv>=1.0",
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "tldextract>=5.1",

  # PostgreSQL driver (Postgres-first target; choose ONE driver family)
  "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "fakeredis>=2.22",
  "respx>=0.21",
  "pytest-asyncio>=0.21",
]
test = [
  "respx>=0.21",
  "pytest-asyncio>=0.21",
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
  ".venv",
  "tmp*.py",
  "tmp_*.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 16

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E501", "E402"]
"src/db.py" = ["C901"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
asyncio_mode = "auto"
